--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:generate": "npx prisma generate"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.7",
     "@prisma/client": "^5.9.1",
     "next": "14.1.0",
     "react": "^18",
